infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopcloud
  labels:
    name: shopcloud
    project: shopcloud
    istio-injection: enabled
    environment: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
